# aigis

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  tests.yml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: http_client.rs  lib.rs  mime_util.rs
crates/core/src/middleware/: headers.rs
crates/core/src/routes/: health.rs  index.rs  metadata.rs  mod.rs  proxy.rs
src/: main.rs
src/server/: cache.rs  http_client.rs  mime_util.rs  mod.rs
src/server/routes/: metadata.rs  mod.rs  proxy.rs
