[package]
version = "0.2.3"
name = "aigis-bin"
description = "Binary for Aigis, a simple and configurable content proxy."
authors = ["Blooym"]
categories = ["web-programming::http-server", "multimedia::images"]
license = "MIT OR Apache-2.0"
keywords = ["proxy"]
repository = "https://github.com/Blooym/aigis"
rust-version = "1.85"
edition = "2024"

[workspace]
members = ["crates/core"]

[[bin]]
name = "aigis"
path = "crates/cli/src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["rustls-tls", "cache-moka"]
# TLS Backends
rustls-tls = ["aigis/rustls-tls"]
native-tls = ["aigis/native-tls"]
# Caching Backends
cache-moka = ["aigis/cache-moka"]
cache-cacache = ["aigis/cache-cacache"]

[dependencies]
anyhow = "1.0.97"
aigis = { version = "0.2.3", path = "crates/core", default-features = false }
bytesize = "2.0.1"
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.44.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
