[package]
version = "0.2.3"
name = "aigis"
description = "A simple and configurable content proxy."
authors = ["Blooym"]
categories = ["web-programming::http-server", "multimedia::images"]
license = "AGPL-3.0-only"
keywords = ["proxy"]
repository = "https://github.com/Blooym/aigis"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bytesize = "2.1.0"
clap = { version = "4.5.49", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "time",
    "signal",
    "net",
] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
axum = { version = "0.8.6", features = ["http2", "tracing"] }
bytes = "1.10.1"
http-cache-reqwest = { version = "0.16.0", features = ["manager-cacache"] }
dirs = { version = "6.0.0", default-features = false }
image = { version = "0.25.8", features = ["serde"] }
mime = "0.3.17"
reqwest = { version = "0.12.24", default-features = false, features = [
    "system-proxy",
    "charset",
    "http2",
    "socks",
] }
reqwest-middleware = { version = "0.4.2" }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
url = "2.5.7"
scraper = "0.24.0"
infer = "0.19.0"
