[package]
version = "0.2.3"
name = "aigis"
description = "A simple and configurable content proxy."
authors = ["Blooym"]
categories = ["web-programming::http-server", "multimedia::images"]
license = "AGPL-3.0-only"
keywords = ["proxy"]
repository = "https://github.com/Blooym/aigis"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
axum = { version = "0.8.6", features = ["http2", "tracing"] }
bytesize = "2.1.0"
clap = { version = "4.5.50", features = ["derive", "env"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
http-cache-semantics = { version = "2.1.0", features = ["reqwest"] }
image = { version = "0.25.8", features = ["serde"] }
infer = "0.19.0"
mime = "0.3.17"
moka = { version = "0.12.11", features = ["future", "logging"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "charset",
    "http2",
    "socks",
    "stream",
    "system-proxy",
] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "time",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
