[package]
version = "0.2.3"
name = "aigis"
description = "A simple and configurable content proxy."
authors = ["Blooym"]
categories = ["web-programming::http-server", "multimedia:images"]
license = "MIT OR Apache-2.0"
keywords = ["proxy"]
repository = "https://github.com/Blooym/aigis"
rust-version = "1.74"
edition = "2021"

[features]
default = ["rustls-tls", "cache-moka"]
# TLS Backends
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
# Caching Backends
cache-moka = ["http-cache-reqwest", "http-cache-reqwest/manager-moka"]
cache-cacache = [
    "http-cache-reqwest",
    "http-cache-reqwest/manager-cacache",
    "dirs",
]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["http2", "tracing"] }
bytes = "1.10.0"
dotenvy = "0.15.7"
http-cache-reqwest = { version = "0.15.1", optional = true, default-features = false }
dirs = { version = "6.0.0", optional = true, default-features = false }
image = "0.25.5"
mime = "0.3.17"
reqwest = { version = "0.12.12", default-features = false, features = [
    "macos-system-configuration",
    "charset",
    "http2",
] }
reqwest-middleware = { version = "0.4.0" }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["signal", "net"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
url = "2.5.4"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
